# ServMak

./: CMakeLists.txt  LIBRARIES.txt  README.md
example/: serviceStructs.h
example/client/: main.cpp  main_oop.cpp  servmak_cli_impl.cpp
example/server/: main.cpp  servmak_serv_impl.cpp
servmak_lib/: README.txt  servmak_client.h  servmak_net.h  servmak_server.hpp  servmak_structs.h
